apps/cloudbeaver/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cloudbeaver
  namespace: nori-cloud
spec:
  serviceName: cloudbeaver
  replicas: 1
  selector:
    matchLabels:
      app: cloudbeaver
  template:
    metadata:
      labels:
        app: cloudbeaver
    spec:
      containers:
        - name: cloudbeaver
          image: dbeaver/cloudbeaver:latest
          ports:
            - containerPort: 8978
              name: http
          volumeMounts:
            - name: cloudbeaver-data
              mountPath: /opt/cloudbeaver/workspace
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
  volumeClaimTemplates:
    - metadata:
        name: cloudbeaver-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: freenas-iscsi
        resources:
          requests:
            storage: 1Gi
