apps/cloudbeaver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudbeaver
  namespace: nori-cloud
spec:
  type: ClusterIP
  selector:
    app: cloudbeaver
  ports:
    - port: 8978
      targetPort: 8978
      name: http
