apps/cloudbeaver/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cloudbeaver
  namespace: nori-cloud
  labels:
    app: cloudbeaver
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`db.norriswu.me`)
      kind: Rule
      services:
        - name: cloudbeaver
          port: 8978
